<resources>
    <string name="app_name">Tip calculate</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="how_was_your_service">How was your service</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_16">Okay (16%)</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>